[package]
name = "usiem-notioner"
version = "0.0.1"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "Send Alerts to Notion. Library to be used to build a custom SIEM with the framework uSIEM"
repository = "https://github.com/u-siem/usiem-datasetmanager-sqlite"
keywords = ["SIEM", "security", "logs","notion"]
categories = ["security"]
edition = "2021"

[lib]
name = "usiem_notioner"
path = "src/lib.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
u-siem = "0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls","blocking","json"]}